add welcome markup

--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -1,1 +1,29 @@
-<p>Hello from partials/_header.html</p>
+<header class="header">
+  <div class="header__logo logo">LOGO</div> 
+  <div class="header__menu">
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__item">
+          <a class="nav__link" href="#capability">Возможности</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link" href="#scenario">Сценарии</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link" href="#specifications">Характеристики</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link" href="#connection">Подключение</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+  <div class="header__additional">
+    <button class="btn" type="button" data-modal="order">Заказать</button>
+    <select name="lang" id="lang">
+      <option value="ru">Ru</option>
+      <option value="ua">Ua</option>
+      <option value="en">En</option>
+    </select>
+  </div>
+</header>
