--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -1,6 +1,8 @@
 body
 	background: #FFF
-	font-family: "Ubuntu",sans-serif 
+	font-family: "Ubuntu",sans-serif
+	-webkit-font-smoothing: antialiased
+	-moz-osx-font-smoothing: grayscale
 .textual
 	font-size: 16px 
 	line-height: 1.5
