--- a/src/templates/partials/index/_welcome.html
+++ b/src/templates/partials/index/_welcome.html
@@ -5,7 +5,7 @@
         <h2 class="h2 sc__heading welcome__heading">Вся ваша инфраструктура под надежным контролем</h2>
         <p>Sferio — это автоматизированная система, которая позволяет снимать информацию о параметрах электрических сигналов с датчиков,
         а также решает задачу их мониторинга и информирования о выходе за установленные пределы.</p>
-        <button type="button" class="btn btn--orange">Заказать</button>
+        <button type="button" class="btn btn--orange" data-modal="order">Заказать</button>
       </div>
       <div class="col-4">
         IMAGE
