--- a/src/templates/partials/index/_specifications.html
+++ b/src/templates/partials/index/_specifications.html
@@ -1,5 +1,6 @@
 <section class="sc specifications" id="specifications">
   <div class="container">
+    <h2 class="h2 sc__heading">Технические характеристики</h2>
     <div class="row">
       <div class="col-md-4">
         IMAGE
