add fonts, add general variables

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -1,6 +1,9 @@
++font('sferio-font', raleway-regular)
++font('sferio-font', raleway-semibold, 600)
+
 body
-	background: #FFF
-	font-family: "Ubuntu",sans-serif
+	background: $color_bg_light
+	font-family: $font
 	-webkit-font-smoothing: antialiased
 	-moz-osx-font-smoothing: grayscale
 .textual
