--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,4 +1,7 @@
 @import helpers/all
 @import generated/sprite-svg
+@import variables
 @import grid-bv4/_bootstrap-grid
 @import common
+
+@import partials/footer
