add images, add base styles, add welcome style

--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -2,5 +2,10 @@ $color_bg_light : #ffffff
 $color_bg : #3a539b
 $color_t : #45494c
 $color_link : #198adf
+$color_orange : #ff7c1c
 
 $font : 'sferio-font', sans-serif
+
+$time: 0.3s
+
+$sm : 767
