--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -3,5 +3,9 @@
 @import variables
 @import grid-bv4/_bootstrap-grid
 @import common
+@import sc
 
+@import partials/header
 @import partials/footer
+
+@import partials/index/welcome
