--- a/src/templates/partials/index/_welcome.html
+++ b/src/templates/partials/index/_welcome.html
@@ -1,14 +1,14 @@
-<section class="welcome sc">
+<section class="welcome sc sc--secondary sc--skew">
   <div class="container">
     <div class="row">
-      <div class="col-8 welcome__text">
+      <div class="col-md-7 welcome__text">
         <h2 class="h2 sc__heading welcome__heading">Вся ваша инфраструктура под надежным контролем</h2>
         <p>Sferio — это автоматизированная система, которая позволяет снимать информацию о параметрах электрических сигналов с датчиков,
         а также решает задачу их мониторинга и информирования о выходе за установленные пределы.</p>
-        <button type="button" class="btn btn--orange" data-modal="order">Заказать</button>
+        <a href="order-form.html" class="btn btn--orange welcome__btn">Заказать</a>
       </div>
-      <div class="col-4">
-        IMAGE
+      <div class="col-md-4 offset-lg-1">
+        <img class="img-responsive welcome__img" src="/img/sferio-frontal-view.jpg" alt="">
       </div>
     </div>
   </div>
