--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -1,3 +1,17 @@
+// MAX-WIDTH
+// +r(575)
+// +r(767)
+// +r(991)
+// +r(1199)
+// +r(1399)
+
+// MIN-WIDTH
+// +rmin(576)
+// +rmin(768)
+// +rmin(992)
+// +rmin(1200)
+// +rmin(1400)
+
 +font('sferio-font', raleway-regular)
 +font('sferio-font', raleway-semibold, 600)
 
@@ -6,17 +20,16 @@ body
 	font-family: $font
 	-webkit-font-smoothing: antialiased
 	-moz-osx-font-smoothing: grayscale
-.textual
-	font-size: 16px 
-	line-height: 1.5
-	color: #000  
 	h2
-		font-size: 32px 
+		font-size: 35px 
 		line-height: 1.1
 		font-weight: normal
 		margin-bottom: 1em
+		color: $color_t
 	p
 		margin-bottom: 1em
+		font-size: 18px
+		line-height: 27px
 	ol
 		list-style: decimal
 		position: relative
@@ -27,12 +40,6 @@ body
 			padding-left: 5px 
 	ol,ul
 		margin-bottom: 1em 
-	&_big
-		font-size: 24px 
-		line-height: 1.3 
-		a
-			text-decoration: none
-			color: #000 
 .form
 	&__field
 		margin-bottom: 10px 
@@ -51,18 +58,19 @@ body
 	height: 100px 
 	padding: 20px 
 	border: none
-.button
+.btn
 	font-size: 14px 
-	line-height: 52px
-	height: 52px  
-	display: block
-	background: #1cabec 
-	text-transform: uppercase
+	line-height: 1  
+	display: inline-block
+	background: $color_orange
 	text-decoration: none
 	color: #fff 
 	font-weight: 600
-	width: 100%  
-	&_inline
-		display: inline-block
-		padding: 0 60px 
-		width: auto
+	padding: 15px 40px
+	transition: all $time
+	&:hover
+		background: $color_bg_light
+		color: $color_orange
+
+.img-responsive
+	max-width: 100%
