add footer style

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -30,6 +30,13 @@ body
 		margin-bottom: 1em
 		font-size: 18px
 		line-height: 27px
+	a
+		color: $color_link
+		text-decoration: none
+		&:hover
+			text-decoration: underline
+		&:visited
+			color: $color_bg
 	ol
 		list-style: decimal
 		position: relative
@@ -89,3 +96,12 @@ body
 .icon-logo
 	width: 100px
 	height: 36px
+
+.text-center
+	text-align: center
+.f12
+	font-size: 12px
+.bold
+	font-weight: 600
+.ml0
+	margin-left: 0
