--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -2,7 +2,7 @@
   <div class="container container--full">
     <div class="header__wrapper">
       <div class="header__logo logo">
-        <a href="#">{{mixins.icon('logo')}}</a>
+        <a href="#HOME">{{mixins.icon('logo')}}</a>
       </div>
       <div class="header__menu">
         <nav class="nav">
