--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -1,43 +1,47 @@
 <footer class="footer">
-  <div class="footer__top">
-    <div class="footer__logo logo">LOGO</div>
-    <div class="footer__info">
-      <span class="footer__label">Email:</span>
-      <a class="link" href="mailto:support@sfer.io">support@sfer.io</a>
-      <span class="footer__label">Tel:</span>
-      <a class="link" href="tel:+380937897878">+38 093 789 78 78</a>
+  <div class="container container--full">
+    <div class="footer__top">
+      <div class="footer__logo logo">
+        <a href="HOME">{{mixins.icon('logo')}}</a>
+      </div>
+      <div class="footer__info">
+        <span class="footer__label bold ml0">Email:</span>
+        <a class="link" href="mailto:support@sfer.io">support@sfer.io</a>
+        <span class="footer__label bold">Tel:</span>
+        <a class="link" href="tel:+380937897878">+38 093 789 78 78</a>
+      </div>
+      <div class="footer__socials socials">
+        <ul class="socials__list">
+          <li class="socials__item">
+            <a class="socials__link" href="#fb">{{mixins.icon('facebook')}}</a>
+          </li>
+          <li class="socials__item">
+            <a class="socials__link" href="#twitter">{{mixins.icon('twitter')}}</a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <div class="footer__socials socials">
-      <ul class="socials__list">
-        <li class="socials__item">
-          <a class="socials__link" href="#fb">fb</a>
+    <div class="footer__nav nav">
+      <ul class="nav__list">
+        <li class="nav__item">
+          <a href="#" class="nav__link" data-title="Пользовательское соглашение">
+            Пользовательское соглашение
+          </a> 
         </li>
-        <li class="socials__item">
-          <a class="socials__link" href="#twitter">tw</a>
+        <li class="nav__item">
+          <a href="#" class="nav__link" data-title="Гарантия">
+            Гарантия
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link" data-title="Политика конфиденциальности">
+            Политика конфиденциальности
+          </a>
         </li>
       </ul>
     </div>
-  </div>
-  <div class="footer__menu">
-    <ul class="footer__nav">
-      <li class="footer__nav-i">
-        <a href="#" class="footer__nav-link">
-           Пользовательское соглашение
-        </a> 
-      </li>
-      <li class="footer__nav-i">
-        <a href="#" class="footer__nav-link">
-           Гарантия
-        </a>
-      </li>
-      <li class="footer__nav-i">
-        <a href="#" class="footer__nav-link">
-           Политика конфиденциальности
-        </a>
-      </li>
-    </ul>
-  </div>
-  <div class="footer__copyright">
-    <p class="tac">2018 © Smart Sphere. Все права сохранены.</p>
+    <div class="footer__copyright">
+      <p class="text-center f12">2018 © Smart Sphere. Все права сохранены.</p>
+    </div>
   </div>
 </footer>
