add capability styles

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -20,10 +20,16 @@ body
 	font-family: $font
 	-webkit-font-smoothing: antialiased
 	-moz-osx-font-smoothing: grayscale
-	h2
+	h2, .h2
 		font-size: 35px 
 		line-height: 1.1
 		font-weight: normal
+		margin-bottom: 1em
+		color: $color_t
+	h3, .h3
+		font-size: 24px 
+		line-height: 30px
+		font-weight: bold
 		margin-bottom: 1em
 		color: $color_t
 	p
@@ -99,6 +105,8 @@ body
 
 .text-center
 	text-align: center
+.text-right
+	text-align: right
 .f12
 	font-size: 12px
 .bold
