--- a/src/templates/partials/index/_welcome.html
+++ b/src/templates/partials/index/_welcome.html
@@ -7,7 +7,7 @@
         а также решает задачу их мониторинга и информирования о выходе за установленные пределы.</p>
         <a href="order-form.html" class="btn btn--orange welcome__btn">Заказать</a>
       </div>
-      <div class="col-md-4 offset-lg-1">
+      <div class="col-md-4 offset-lg-1 text-right">
         <img class="img-responsive welcome__img" src="/img/sferio-frontal-view.jpg" alt="">
       </div>
     </div>
