add scenario styling

--- a/src/templates/partials/index/_scenario.html
+++ b/src/templates/partials/index/_scenario.html
@@ -1,6 +1,11 @@
 <section class="sc scenario" id="scenario">
-  <h2 class="sc__heading">Почему стоит использовать Sferio?</h2>
   <div class="scenario__canvas">
-    IMAGE
+    <h2 class="sc__heading scenario__heading">Почему стоит использовать Sferio?</h2>
+    <span class="scenario__tip scenario__tip--1"></span>
+    <span class="scenario__tip scenario__tip--2"></span>
+    <span class="scenario__tip scenario__tip--3"></span>
+    <span class="scenario__tip scenario__tip--4"></span>
+    <span class="scenario__tip scenario__tip--5"></span>
+    <img class="scenario__img" src="/img/house.jpg" alt="house">
   </div>
 </section>
