add specifications styling

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -91,6 +91,7 @@ body
 		&:hover
 			background: $color_bg_light
 			color: $color_orange
+			text-decoration: none
 
 .img-responsive
 	max-width: 100%
