--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -12,3 +12,4 @@
 @import partials/index/welcome
 @import partials/index/capability
 @import partials/index/scenario
+@import partials/index/specifications
