--- a/src/templates/partials/index/_specifications.html
+++ b/src/templates/partials/index/_specifications.html
@@ -1,11 +1,11 @@
-<section class="sc specifications" id="specifications">
+<section class="sc specifications sc--secondary" id="specifications">
   <div class="container">
-    <h2 class="h2 sc__heading">Технические характеристики</h2>
+    <h2 class="h2 sc__heading specifications__heading">Технические характеристики</h2>
     <div class="row">
       <div class="col-md-4">
-        IMAGE
+        <img class="img-responsive" src="img/sferio-left.png" alt="sferio left view">
       </div>
-      <div class="col-md-8">
+      <div class="offset-md-1 col-md-7">
         <ul class="specifications__list">
           <li class="specifications__item">
             <p class="specifications__name">Габаритные размеры</p>
@@ -40,7 +40,7 @@
             <p class="specifications__data">802.11 b/g/n</p>
           </li>
         </ul>
-        <button class="btn btn--orange" type="buttone" data-modal="order"></button>
+        <a href="order-form.html" class="btn btn--orange">Заказать</a>
       </div>
     </div>
   </div>
