--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -13,3 +13,4 @@
 @import partials/index/capability
 @import partials/index/scenario
 @import partials/index/specifications
+@import partials/index/connection
