--- a/src/templates/partials/index/_connection.html
+++ b/src/templates/partials/index/_connection.html
@@ -4,34 +4,34 @@
     <div class="row">
       <div class="col-sm-6 col-md-4">
         <ul class="connection__list">
-          <li classs="connection__item">
+          <li class="connection__item">
             <span class="num-circle">1</span>
              Установите устройство в электрощит
           </li>
-          <li classs="connection__item">
+          <li class="connection__item">
             <span class="num-circle">2</span>
              Подключите провода к клемам устройства
           </li>
-          <li classs="connection__item">
+          <li class="connection__item">
             <span class="num-circle">3</span>
              Подайте напряжение питания на устройство
           </li>
-          <li classs="connection__item">
+          <li class="connection__item">
             <span class="num-circle">4</span>
              Сконфигурируйте устройство
           </li>
-          <li classs="connection__item">
+          <li class="connection__item">
             <span class="num-circle">5</span>
              Настройте платформу ZABBIX
           </li>
         </ul>
       </div>
-      <div class="col-sm-6 col-md-8">
+      <div class="col-sm-6 col-md-7 offset-md-1">
         <div class="connection__images">
-          IMAGE
+          <img class="img-responsive" src="/img/step-1.png" alt="step-1">
         </div>
       </div>
     </div>
-    <p class="connection__tip">Более детальную информацию по установке Sferio вы можете найти в <a class="link" href="#">паспорте устройства.</a></p>
+    <p class="connection__tip text-center">Более детальную информацию по установке Sferio вы можете найти в <a class="link" href="#">паспорте устройства.</a></p>
   </div>    
 </section>
