fix image path for git

--- a/src/templates/partials/index/_capability.html
+++ b/src/templates/partials/index/_capability.html
@@ -3,7 +3,7 @@
     <h2 class="sc__heading">Какие возможности системы?</h2>
     <div class="row capability__item">
       <div class="offset-right-md-1 col-md-5 align-self-center">
-        <img class="img-responsive" src="/img/electr.png" alt="electricity">
+        <img class="img-responsive" src="./img/electr.png" alt="electricity">
       </div>
       <div class="offset-md-1 col-md-5 align-self-center">
         <h3 class="h3">
@@ -24,12 +24,12 @@
         анализа данных.</p>
       </div>
       <div class="offset-md-1 col-md-5 align-self-center">
-        <img class="img-responsive" src="/img/zabbix.png" alt="zabbix">
+        <img class="img-responsive" src="./img/zabbix.png" alt="zabbix">
       </div>
     </div>
     <div class="row capability__item">
       <div class="offset-right-md-1 col-md-5 align-self-center">
-        <img class="img-responsive" src="/img/mac.png" alt="mac">
+        <img class="img-responsive" src="./img/mac.png" alt="mac">
       </div>
       <div class="offset-md-1 col-md-5 align-self-center">
         <h3 class="h3">
