--- a/src/templates/partials/index/_connection.html
+++ b/src/templates/partials/index/_connection.html
@@ -28,7 +28,7 @@
       </div>
       <div class="col-sm-6 col-md-7 offset-md-1">
         <div class="connection__images">
-          <img class="img-responsive" src="/img/step-1.png" alt="step-1">
+          <img class="img-responsive" src="./img/step-1.png" alt="step-1">
         </div>
       </div>
     </div>
