--- a/src/templates/partials/index/_scenario.html
+++ b/src/templates/partials/index/_scenario.html
@@ -6,6 +6,6 @@
     <span class="scenario__tip scenario__tip--3"></span>
     <span class="scenario__tip scenario__tip--4"></span>
     <span class="scenario__tip scenario__tip--5"></span>
-    <img class="scenario__img" src="/img/house.jpg" alt="house">
+    <img class="scenario__img" src="./img/house.jpg" alt="house">
   </div>
 </section>
