add connectionTab animation

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -83,6 +83,9 @@ body
 	&:hover
 		color: $color_orange
 		border-color: $color_orange
+		text-decoration: none
+	&:visited
+		color: #fff
 	&--orange
 		font-weight: 600
 		background: $color_orange
