--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -2,7 +2,7 @@
   <div class="container container--full">
     <div class="header__wrapper">
       <div class="header__logo logo">
-        <a href="#HOME">{{mixins.icon('logo')}}</a>
+        <a href="/">{{mixins.icon('logo')}}</a>
       </div>
       <div class="header__menu">
         <nav class="nav">
@@ -23,7 +23,7 @@
         </nav>
       </div>
       <div class="header__additional">
-        <button class="btn" type="button" data-modal="order">Заказать</button>
+        <a class="btn" href="./order-form.html">Заказать</a>
         <select name="lang" id="lang">
           <option value="ru">Ru</option>
           <option value="ua">Ua</option>
