--- a/src/templates/partials/index/_connection.html
+++ b/src/templates/partials/index/_connection.html
@@ -1,34 +1,38 @@
-<section class="sc connection" id="connection">
+<section class="sc connection js-connection-tab" id="connection">
   <div class="container">
     <h2 class="h2 sc__heading">Как подключить Sferio?</h2>
     <div class="row">
       <div class="col-sm-6 col-md-4">
         <ul class="connection__list">
-          <li class="connection__item">
-            <span class="num-circle">1</span>
-             Установите устройство в электрощит
+          <li class="connection__item connection__item--active">
+            <span class="connection__num num-circle">1</span>
+            <span class="connection__caption">Установите устройство в электрощит</span>
           </li>
           <li class="connection__item">
-            <span class="num-circle">2</span>
-             Подключите провода к клемам устройства
+            <span class="connection__num num-circle">2</span>
+            <span class="connection__caption">Подключите провода к клемам устройства</span>
           </li>
           <li class="connection__item">
-            <span class="num-circle">3</span>
-             Подайте напряжение питания на устройство
+            <span class="connection__num num-circle">3</span>
+            <span class="connection__caption">Подайте напряжение питания на устройство</span>
           </li>
           <li class="connection__item">
-            <span class="num-circle">4</span>
-             Сконфигурируйте устройство
+            <span class="connection__num num-circle">4</span>
+            <span class="connection__caption">Сконфигурируйте устройство</span>
           </li>
           <li class="connection__item">
-            <span class="num-circle">5</span>
-             Настройте платформу ZABBIX
+            <span class="connection__num num-circle">5</span>
+            <span class="connection__caption">Настройте платформу ZABBIX</span>
           </li>
         </ul>
       </div>
       <div class="col-sm-6 col-md-7 offset-md-1">
         <div class="connection__images">
-          <img class="img-responsive" src="./img/step-1.png" alt="step-1">
+          <img class="img-responsive connection__image connection__image--active" src="./img/step-1.png" alt="step-1">
+          <img class="img-responsive connection__image" src="./img/step-2.png" alt="step-2">
+          <img class="img-responsive connection__image" src="./img/step-3.png" alt="step-3">
+          <img class="img-responsive connection__image" src="./img/step-4.png" alt="step-4">
+          <img class="img-responsive connection__image" src="./img/step-5.png" alt="step-5">
         </div>
       </div>
     </div>
