--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -26,6 +26,8 @@ body
 		font-weight: normal
 		margin-bottom: 1em
 		color: $color_t
+		+r(767)
+			font-size: 30px
 	h3, .h3
 		font-size: 24px 
 		line-height: 30px
