--- a/src/templates/partials/index/_specifications.html
+++ b/src/templates/partials/index/_specifications.html
@@ -2,8 +2,8 @@
   <div class="container">
     <h2 class="h2 sc__heading specifications__heading">Технические характеристики</h2>
     <div class="row">
-      <div class="col-md-4">
-        <img class="img-responsive" src="img/sferio-left.png" alt="sferio left view">
+      <div class="col-md-4 text-center specifications__picture">
+        <img class="img-responsive specifications__img" src="img/sferio-left.png" alt="sferio left view">
       </div>
       <div class="offset-md-1 col-md-7">
         <ul class="specifications__list">
@@ -40,7 +40,9 @@
             <p class="specifications__data">802.11 b/g/n</p>
           </li>
         </ul>
-        <a href="order-form.html" class="btn btn--orange">Заказать</a>
+        <div class="specifications__buttons">
+          <a href="order-form.html" class="btn btn--orange">Заказать</a>
+        </div>
       </div>
     </div>
   </div>
