--- a/src/sass/partials/index/_specifications.sass
+++ b/src/sass/partials/index/_specifications.sass
@@ -1,6 +1,8 @@
 .specifications
   &__heading
     padding-bottom: 75px
+    +r(767)
+      padding-bottom: 40px
   &__list
     display: flex
     flex-wrap: wrap
@@ -8,8 +10,23 @@
     justify-content: space-between
   &__item
     flex: 0 0 50%
+    max-width: 50%
     padding-right: 30px
     margin-bottom: 30px
+    +r(767)
+      flex: 0 0 100%
+      max-width: 100%
   &__name
     font-weight: 600
     margin-bottom: 2px
+  &__img
+    +r(767)
+      width: 100%
+      max-width: 350px
+      margin-bottom: 40px
+  &__picture
+    +r(767)
+      padding: 0 20px
+  &__buttons
+    +r(767)
+      text-align: center
