--- a/src/sass/partials/index/_welcome.sass
+++ b/src/sass/partials/index/_welcome.sass
@@ -22,6 +22,7 @@
     line-height: 50px
     font-weight: 600
     text-align: left
+    color: $color_bg_light
   &__img
     box-shadow: 0px 9px 13px 0px rgba(0, 0, 0, 0.45)
   &__btn
