--- a/src/templates/partials/index/_capability.html
+++ b/src/templates/partials/index/_capability.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h2 class="sc__heading">Какие возможности системы?</h2>
     <div class="row capability__item">
-      <div class="offset-right-md-1 col-md-5 align-self-center">
+      <div class="offset-right-md-1 col-md-5 align-self-center capability__img-c">
         <img class="img-responsive" src="./img/electr.png" alt="electricity">
       </div>
       <div class="offset-md-1 col-md-5 align-self-center">
@@ -23,12 +23,12 @@
         позволяет собирать и хранить принятую информацию, настраивать оповещения при выходе сигнала за определенные рамки и логику
         анализа данных.</p>
       </div>
-      <div class="offset-md-1 col-md-5 align-self-center">
+      <div class="offset-md-1 col-md-5 align-self-center capability__img-c">
         <img class="img-responsive" src="./img/zabbix.png" alt="zabbix">
       </div>
     </div>
     <div class="row capability__item">
-      <div class="offset-right-md-1 col-md-5 align-self-center">
+      <div class="offset-right-md-1 col-md-5 align-self-center capability__img-c">
         <img class="img-responsive" src="./img/mac.png" alt="mac">
       </div>
       <div class="offset-md-1 col-md-5 align-self-center">
@@ -48,7 +48,7 @@
         Устройство подключается к системам и визуально и звуковыми ефектами отображает информацию об их состоянии. Ознакомьтесь с
         деталями в <a href="#">паспорте устройства.</a></p>
       </div>
-      <div class="offset-md-1 col-md-5 align-self-center text-center">
+      <div class="offset-md-1 col-md-5 align-self-center text-center capability__img-c">
         <div class"capability__img">
           <svg width="150" height="355" viewBox="0 0 50 205">
             <g fill="none" fill-rule="evenodd">
@@ -70,8 +70,8 @@
     </div>
   </div>
   <aside class="capability__add">
-    <h3 class="h3 text-center">Дополнительные преимущества</h3>
     <div class="container">
+      <h3 class="h3 text-center capability__secondary-h">Дополнительные преимущества</h3>
       <div class="capability__icon-t icon-t">
         <div class="icon-t__item">
           <div class="icon-t__content">
