--- a/src/templates/order-form.html
+++ b/src/templates/order-form.html
@@ -6,6 +6,8 @@ title: Index page
 
 {% include "partials/_header.html" %}
 
+{% include "partials/_page-header.html" %}
+
 {% include "partials/_footer.html" %}
 
 {% endblock %}
