--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -23,7 +23,7 @@
         </nav>
       </div>
       <div class="header__additional">
-        <a class="btn" href="./order-form.html">Заказать</a>
+        <a class="btn header__btn" href="./order-form.html">Заказать</a>
         <select name="lang" id="lang">
           <option value="ru">Ru</option>
           <option value="ua">Ua</option>
