--- a/src/templates/partials/index/_welcome.html
+++ b/src/templates/partials/index/_welcome.html
@@ -5,10 +5,10 @@
         <h1 class="h1 sc__heading welcome__heading">Вся ваша инфраструктура под надежным контролем</h1>
         <p>Sferio — это автоматизированная система, которая позволяет снимать информацию о параметрах электрических сигналов с датчиков,
         а также решает задачу их мониторинга и информирования о выходе за установленные пределы.</p>
-        <a href="order-form.html" class="btn btn--orange welcome__btn">Заказать</a>
+        <div class="welcome__btns"><a href="order-form.html" class="btn btn--orange welcome__btn">Заказать</a></div>
       </div>
-      <div class="col-md-4 offset-lg-1 text-right">
-        <img class="img-responsive welcome__img" src="/img/sferio-frontal-view.jpg" alt="">
+      <div class="col-md-4 offset-lg-1 text-right welcome__rcol">
+        <img class="img-responsive welcome__img" src="./img/sferio-frontal-view.jpg" alt="">
       </div>
     </div>
   </div>
