--- a/src/sass/partials/_header.sass
+++ b/src/sass/partials/_header.sass
@@ -14,5 +14,12 @@
   &__logo
     margin-right: auto
   &__menu
-    .nav__link
+    +r(991)
+      display: none
+  &__btn
+    margin-right: 30px
+    +r(991)
+      padding: 8px 20px
+    +r(767)
+      margin-right: 10px
       
