--- a/src/sass/partials/index/_capability.sass
+++ b/src/sass/partials/index/_capability.sass
@@ -26,6 +26,7 @@
       text-align: left
   &__img-c
     +r(767)
+      text-align: center
       order: -1
       margin-top: 40px
       margin-bottom: 40px
