--- a/src/sass/partials/index/_connection.sass
+++ b/src/sass/partials/index/_connection.sass
@@ -14,6 +14,8 @@
   &__tip
     font-size: 16px
     margin-top: 75px
+    +r(420)
+      margin-top: 0
   &__images
     position: relative
     min-height: 400px
