--- a/src/sass/partials/index/_welcome.sass
+++ b/src/sass/partials/index/_welcome.sass
@@ -8,6 +8,8 @@
     height: auto
     min-height: auto
     padding-top: 100px
+  +r(767)
+    padding-bottom: 0
   .container
     padding-top: 14%
     height: 100%
@@ -27,3 +29,11 @@
     box-shadow: 0px 9px 13px 0px rgba(0, 0, 0, 0.45)
   &__btn
     margin-top: 40px
+    +r(767)
+      margin: 30px 0
+  &__btns
+    +r(767)
+      text-align: center
+  &__rcol
+    +r(767)
+      text-align: center
