--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -5,10 +5,14 @@
         <a href="HOME">{{mixins.icon('logo')}}</a>
       </div>
       <div class="footer__info">
-        <span class="footer__label bold ml0">Email:</span>
-        <a class="link" href="mailto:support@sfer.io">support@sfer.io</a>
-        <span class="footer__label bold">Tel:</span>
-        <a class="link" href="tel:+380937897878">+38 093 789 78 78</a>
+        <div class="footer__i">
+          <span class="footer__label bold ml0">Email:</span>
+          <a class="link" href="mailto:support@sfer.io">support@sfer.io</a>
+        </div>
+        <div class="footer__i">
+          <span class="footer__label bold">Телефон:</span>
+          <a class="link" href="tel:+380937897878">+38 093 789 78 78</a>
+        </div>
       </div>
       <div class="footer__socials socials">
         <ul class="socials__list">
