add order page, add styles to secondary pages

--- a/src/sass/_sc.sass
+++ b/src/sass/_sc.sass
@@ -1,6 +1,8 @@
 .sc
   padding-top: 75px
   padding-bottom: 75px
+  &--main
+    padding-top: 70px
   &--secondary
     background: $color_bg
     color: $color_bg_light
