--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -4,10 +4,14 @@
 @import grid-bv4/_bootstrap-grid
 @import common
 @import sc
+@import page
+
+@import s-form
 
 @import partials/header
 @import partials/footer
 @import partials/nav
+@import partials/order
 
 @import partials/index/welcome
 @import partials/index/capability
