--- a/src/templates/partials/_page-header.html
+++ b/src/templates/partials/_page-header.html
@@ -1,3 +1,6 @@
-<div class="page__header">
-  <h1>Гарантия</h1>
+<div class="page__header sc__header text-center">
+  <div class="mw650">
+    <h1 class="h2 clr_w">Оформление заказа</h1>
+    <p class="clr_w">Чтобы заказать устройство Sferio заполните форму ниже и представитель нашей компании свяжется с вами для подтверждения заказа.</p>
+  </div>
 </div>
