--- a/src/sass/partials/_footer.sass
+++ b/src/sass/partials/_footer.sass
@@ -34,6 +34,7 @@
       flex: 0 0 100%
       padding: 40px 0
   &__i
+    display: inline-block
     +r(991)
       display: block
       padding-bottom: 10px
