media header styling

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -90,10 +90,11 @@ ol
 	line-height: 1  
 	display: inline-block
 	background: transparent
-	border: 2px solid $color_bg_light
+	border: 1px solid $color_bg_light
 	text-decoration: none
 	color: #fff 
 	font-weight: 400
+	margin-right: 15px
 	padding: 10px 30px
 	transition: all $time
 	&:hover
