--- a/src/sass/partials/_header.sass
+++ b/src/sass/partials/_header.sass
@@ -14,5 +14,19 @@
   &__logo
     margin-right: auto
   &__menu
-    .nav__link
-      
+    +r(768)
+      display: none
+
+  &__additional
+    +r(768)
+      margin-top: 10px
+     
+
+  select
+    +r(768)
+     display: block
+     margin-top: 15px
+
+
+  
+        
