--- a/src/sass/partials/nav.sass
+++ b/src/sass/partials/nav.sass
@@ -6,11 +6,12 @@
     margin: 0 15px
   &__link
     text-decoration: none
-    color: $color_bg_light
+    color: $color_link_primary
     &:hover
       font-weight: 600
+      text-decoration: none
     &:visited
-      color: $color_bg_light
+     color: $color_link_hover
     &:after
       display: block
       content: attr(data-title)
